fix(ui): make the schema errors text visible by changing it from white to black

--- a/vyne-query-service/src/main/web/src/app/code-viewer/error-list.component.scss
+++ b/vyne-query-service/src/main/web/src/app/code-viewer/error-list.component.scss
@@ -25,6 +25,7 @@
 
 .description-cell {
   width: 100%;
+  color: black;
 }
 .position-cell {
   width: 200px;
